2005-01-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- More bookmark love from Don Scorgie

	* src/yelp-info-pager.c:
	* src/yelp-man-pager.c:
	- Fixed build failures from renamed #defines

2005-01-17  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-db-pager.c:
	* stylesheets/Makefile.am:
	* stylesheets/db-title.xsl.in:
	- Get titles from the db.titleabbrev XSLT template

	* data/toc.xml.in:
	- Changed 'Sound & Video' to be 'Multimedia', for upstream compliance

	* src/yelp-info-pager.c:
	* src/yelp-man-pager.c:
	* src/yelp-toc-pager.c:
	- Some #define naming changes

2005-01-13  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.9.3

2005-01-13  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp.glade:
	* src/yelp-bookmarks.c:
	- Bookmarks improvements

2005-01-10  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	* src/yelp-window.c:
	- Calling the fromt page Help Topics

	* src/yelp-settings.c:
	* src/yelp-settings.h:
	- Added prev/next page icons

	* src/yelp-window.c:
	- Did some work on the Find toolbar

	* stylesheets/db2html.xsl.in:
	- Some navigation bar work

2005-01-09  Shaun McCance  <shaunm@gnome.org>

	* data/yelp.schemas.in:
	- Cleaned up string, #161777

2005-01-09  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-xslt-pager.c:
	- Fixed messy string, #162808

2005-01-09  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Put the current URI in the Ctrl+L dialog

2005-01-03  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Use xsltSaveResultToString here, fixes #162796

2005-01-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- Use GTK_MESSAGE_INFO when bookmark exists

	* src/yelp-window.c:
	- s/Page/Section/ as it makes more sense

2005-01-02  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp.glade:
	* src/yelp-bookmarks.c:
	* src/yelp-bookmarks.h:
	* src/yelp-window.c;
	- More bookmarks work

2005-01-02  Shaun McCance  <shaunm@gnome.org>
