@@ -1,3 +1,10 @@
+2005-01-19  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-html-gecko.c:
+	* src/yelp-html.h:
+	* src/yelp-window.c:
+	- Fix display of plain ol' HTML files, from Don Scorgie
+
 2005-01-18  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-bookmarks.c:
